--- a/index.html
+++ b/index.html
@@ -14,25 +14,31 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">Game Controllers</a>
+                        <a href="">Home</a>
                         <a href="">VR Accessories</a>
                         <a href="">Media Remotes</a>
+                        <a href="">Game Controllers</a>
                         <a href="">Others</a>
                     </li>
                 </ul>
             </nav>
             <img src="img/menu.png" alt="menu-icon" class="menu-icon">
 
-            <div class="row">
-                <div class="col1">
-                    <h2>PS5 <br> Dualsense</h2>
-                    <h3>Wireless Controller for Playstation 5</h3>
-                </div>
-                <div class="col-2">
-
-                </div>
             
+        </div>
+
+        <div class="row">
+            <div class="col1">
+                <h2>PS5 <br> Dualsense</h2>
+                <h3>Wireless Controller for Playstation 5</h3>
+                <p>(Compatible / Generic)</p>
+                <h4>$32.5</h4>
+                <button type="button">Buy Now <img src="img/arrow.png"></button>
             </div>
+            <div class="col2">
+                <img src="img/controller.png" class="controller">
+            </div>
+        
         </div>
     </div>
 </body>
